Refactor current main (#178)